// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusTracker should display the first step with the active class 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  position: relative;
  z-index: 1;
  display: flex;
  padding: 0;
  margin: 0;
}

.c3 {
  position: relative;
  width: 25%;
  color: #919191;
  list-style-type: none;
  text-align: center;
}

.c3>.status-text {
  display: none;
}

.done.c3>.status-text,
.active.c3>.status-text,
.error.c3>.status-text {
  color: #00a0d2;
}

.active.c3>.status-text,
.error.c3>.status-text {
  display: inherit;
  font-weight: bold;
}

.c3.c3::before {
  content: '';
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px;
  text-align: center;
  width: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.error.c3.c3::before,
.active.c3.c3::before {
  width: 30px;
  height: 30px;
  margin: 0 auto 10px;
  line-height: 30px;
}

.done.c3.c3::before,
.active.c3.c3::before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c3.c3::before {
  font-size: 14px;
}

.active.c3.c3::before {
  font-size: 22px;
}

.error.c3.c3::before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c3::after {
  position: absolute;
  z-index: -1;
  top: 17px;
  left: -50%;
  width: 100%;
  height: 4px;
  background-color: #c5c5c5;
  content: '';
}

.active.c3::after,
.done.c3::after,
.error.c3::after {
  background-color: #00a0d2;
}

.c3:first-child::after {
  content: none;
}

.c2 {
  position: relative;
  width: 25%;
  color: #919191;
  list-style-type: none;
  text-align: center;
}

.c2>.status-text {
  display: none;
}

.done.c2>.status-text,
.active.c2>.status-text,
.error.c2>.status-text {
  color: #00a0d2;
}

.active.c2>.status-text,
.error.c2>.status-text {
  display: inherit;
  font-weight: bold;
}

.c2.c2::before {
  content: '';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px;
  text-align: center;
  width: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.error.c2.c2::before,
.active.c2.c2::before {
  width: 30px;
  height: 30px;
  margin: 0 auto 10px;
  line-height: 30px;
}

.done.c2.c2::before,
.active.c2.c2::before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c2.c2::before {
  font-size: 14px;
}

.active.c2.c2::before {
  font-size: 22px;
}

.error.c2.c2::before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c2::after {
  position: absolute;
  z-index: -1;
  top: 17px;
  left: -50%;
  width: 100%;
  height: 4px;
  background-color: #c5c5c5;
  content: '';
}

.active.c2::after,
.done.c2::after,
.error.c2::after {
  background-color: #00a0d2;
}

.c2:first-child::after {
  content: none;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {
  .c3>.status-text {
    display: inherit;
  }
}

@media (min-width: 768px) {
  .done.c3.c3::before {
    font-size: 22px;
  }
}

@media (min-width: 768px) {
  .c3 .status-text {
    display: inherit;
  }

  .c3.active::before,
  .c3.done::before {
    width: 30px;
    height: 30px;
    margin: 0 auto 10px;
    line-height: 30px;
  }
}

@media (min-width: 768px) {
  .c2>.status-text {
    display: inherit;
  }
}

@media (min-width: 768px) {
  .done.c2.c2::before {
    font-size: 22px;
  }
}

@media (min-width: 768px) {
  .c2 .status-text {
    display: inherit;
  }

  .c2.active::before,
  .c2.done::before {
    width: 30px;
    height: 30px;
    margin: 0 auto 10px;
    line-height: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 active"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c3"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c3"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c3"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;

exports[`StatusTracker should display the last step with the active class 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  position: relative;
  z-index: 1;
  display: flex;
  padding: 0;
  margin: 0;
}

.c2 {
  position: relative;
  width: 25%;
  color: #919191;
  list-style-type: none;
  text-align: center;
}

.c2>.status-text {
  display: none;
}

.done.c2>.status-text,
.active.c2>.status-text,
.error.c2>.status-text {
  color: #00a0d2;
}

.active.c2>.status-text,
.error.c2>.status-text {
  display: inherit;
  font-weight: bold;
}

.c2.c2::before {
  content: '';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px;
  text-align: center;
  width: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.error.c2.c2::before,
.active.c2.c2::before {
  width: 30px;
  height: 30px;
  margin: 0 auto 10px;
  line-height: 30px;
}

.done.c2.c2::before,
.active.c2.c2::before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c2.c2::before {
  font-size: 14px;
}

.active.c2.c2::before {
  font-size: 22px;
}

.error.c2.c2::before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c2::after {
  position: absolute;
  z-index: -1;
  top: 17px;
  left: -50%;
  width: 100%;
  height: 4px;
  background-color: #c5c5c5;
  content: '';
}

.active.c2::after,
.done.c2::after,
.error.c2::after {
  background-color: #00a0d2;
}

.c2:first-child::after {
  content: none;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {
  .c2>.status-text {
    display: inherit;
  }
}

@media (min-width: 768px) {
  .done.c2.c2::before {
    font-size: 22px;
  }
}

@media (min-width: 768px) {
  .c2 .status-text {
    display: inherit;
  }

  .c2.active::before,
  .c2.done::before {
    width: 30px;
    height: 30px;
    margin: 0 auto 10px;
    line-height: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c2 active"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;

exports[`StatusTracker should display the last step with the error class when isErrorState is true 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  position: relative;
  z-index: 1;
  display: flex;
  padding: 0;
  margin: 0;
}

.c2 {
  position: relative;
  width: 25%;
  color: #919191;
  list-style-type: none;
  text-align: center;
}

.c2>.status-text {
  display: none;
}

.done.c2>.status-text,
.active.c2>.status-text,
.error.c2>.status-text {
  color: #00a0d2;
}

.active.c2>.status-text,
.error.c2>.status-text {
  display: inherit;
  font-weight: bold;
}

.c2.c2::before {
  content: '';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px;
  text-align: center;
  width: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.error.c2.c2::before,
.active.c2.c2::before {
  width: 30px;
  height: 30px;
  margin: 0 auto 10px;
  line-height: 30px;
}

.done.c2.c2::before,
.active.c2.c2::before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c2.c2::before {
  font-size: 14px;
}

.active.c2.c2::before {
  font-size: 22px;
}

.error.c2.c2::before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c2::after {
  position: absolute;
  z-index: -1;
  top: 17px;
  left: -50%;
  width: 100%;
  height: 4px;
  background-color: #c5c5c5;
  content: '';
}

.active.c2::after,
.done.c2::after,
.error.c2::after {
  background-color: #00a0d2;
}

.c2:first-child::after {
  content: none;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {
  .c2>.status-text {
    display: inherit;
  }
}

@media (min-width: 768px) {
  .done.c2.c2::before {
    font-size: 22px;
  }
}

@media (min-width: 768px) {
  .c2 .status-text {
    display: inherit;
  }

  .c2.active::before,
  .c2.done::before {
    width: 30px;
    height: 30px;
    margin: 0 auto 10px;
    line-height: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c2 error"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;

exports[`StatusTracker should display the third step with the active class 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  position: relative;
  z-index: 1;
  display: flex;
  padding: 0;
  margin: 0;
}

.c3 {
  position: relative;
  width: 25%;
  color: #919191;
  list-style-type: none;
  text-align: center;
}

.c3>.status-text {
  display: none;
}

.done.c3>.status-text,
.active.c3>.status-text,
.error.c3>.status-text {
  color: #00a0d2;
}

.active.c3>.status-text,
.error.c3>.status-text {
  display: inherit;
  font-weight: bold;
}

.c3.c3::before {
  content: '';
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px;
  text-align: center;
  width: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.error.c3.c3::before,
.active.c3.c3::before {
  width: 30px;
  height: 30px;
  margin: 0 auto 10px;
  line-height: 30px;
}

.done.c3.c3::before,
.active.c3.c3::before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c3.c3::before {
  font-size: 14px;
}

.active.c3.c3::before {
  font-size: 22px;
}

.error.c3.c3::before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c3::after {
  position: absolute;
  z-index: -1;
  top: 17px;
  left: -50%;
  width: 100%;
  height: 4px;
  background-color: #c5c5c5;
  content: '';
}

.active.c3::after,
.done.c3::after,
.error.c3::after {
  background-color: #00a0d2;
}

.c3:first-child::after {
  content: none;
}

.c2 {
  position: relative;
  width: 25%;
  color: #919191;
  list-style-type: none;
  text-align: center;
}

.c2>.status-text {
  display: none;
}

.done.c2>.status-text,
.active.c2>.status-text,
.error.c2>.status-text {
  color: #00a0d2;
}

.active.c2>.status-text,
.error.c2>.status-text {
  display: inherit;
  font-weight: bold;
}

.c2.c2::before {
  content: '';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px;
  text-align: center;
  width: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.error.c2.c2::before,
.active.c2.c2::before {
  width: 30px;
  height: 30px;
  margin: 0 auto 10px;
  line-height: 30px;
}

.done.c2.c2::before,
.active.c2.c2::before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c2.c2::before {
  font-size: 14px;
}

.active.c2.c2::before {
  font-size: 22px;
}

.error.c2.c2::before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c2::after {
  position: absolute;
  z-index: -1;
  top: 17px;
  left: -50%;
  width: 100%;
  height: 4px;
  background-color: #c5c5c5;
  content: '';
}

.active.c2::after,
.done.c2::after,
.error.c2::after {
  background-color: #00a0d2;
}

.c2:first-child::after {
  content: none;
}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {

}

@media (min-width: 768px) {
  .c3>.status-text {
    display: inherit;
  }
}

@media (min-width: 768px) {
  .done.c3.c3::before {
    font-size: 22px;
  }
}

@media (min-width: 768px) {
  .c3 .status-text {
    display: inherit;
  }

  .c3.active::before,
  .c3.done::before {
    width: 30px;
    height: 30px;
    margin: 0 auto 10px;
    line-height: 30px;
  }
}

@media (min-width: 768px) {
  .c2>.status-text {
    display: inherit;
  }
}

@media (min-width: 768px) {
  .done.c2.c2::before {
    font-size: 22px;
  }
}

@media (min-width: 768px) {
  .c2 .status-text {
    display: inherit;
  }

  .c2.active::before,
  .c2.done::before {
    width: 30px;
    height: 30px;
    margin: 0 auto 10px;
    line-height: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c2 done"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c2 active"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c3"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;
